[workspace]
resolver = "2"
members = [
    "pumpkin-config",
    "pumpkin-core",
    "pumpkin-entity",
    "pumpkin-inventory",
    "pumpkin-macros/",
    "pumpkin-protocol/",
    "pumpkin-registry/",
    "pumpkin-world",
    "pumpkin/",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1

[workspace.dependencies]
log = "0.4"
tokio = { version = "1.40", features = [
    "fs",
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "sync",
] }

# Concurrency/Parallelism and Synchronization
rayon = "1.10.0"
parking_lot = "0.12.3"
crossbeam = "0.8.4"

uuid = { version = "1.10.0", features = ["serde", "v3", "v4"] }
derive_more = { version = "1.0.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }

itertools = "0.13.0"
