[workspace]
resolver = "2"
members = [
    "pumpkin-config",
    "pumpkin-core",
    "pumpkin-entity",
    "pumpkin-inventory",
    "pumpkin-macros/",
    "pumpkin-protocol/",
    "pumpkin-registry/",
    "pumpkin-world",
    "pumpkin/",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true

[workspace.dependencies]
serde_json = "1.0"
log = "0.4"
tokio = { version = "1.41", features = [
    "fs",
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "sync",
    "io-std",
    "signal",
] }

thiserror = "1.0"
num-traits = "0.2"
num-derive = "0.4"

# Concurrency/Parallelism and Synchronization
rayon = "1.10.0"
parking_lot = { version = "0.12.3", features = ["send_guard"] }
crossbeam = "0.8.4"

uuid = { version = "1.11.0", features = ["serde", "v3", "v4"] }
derive_more = { version = "1.0.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }

itertools = "0.13.0"
