[package]
name = "pumpkin-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
uuid.workspace = true
num-traits.workspace = true
num-derive.workspace = true

fastnbt = { git = "https://github.com/owengage/fastnbt.git" }
colored = "2"
md5 = "0.7.0"

enum_dispatch = "0.3.13"
