[package]
name = "pumpkin-core"
version.workspace = true
edition.workspace = true

[features]
schemars = ["dep:schemars"]

[dependencies]
pumpkin-nbt = { path = "../pumpkin-nbt" }
serde.workspace = true
bytes.workspace = true
uuid.workspace = true
num-traits.workspace = true
num-derive.workspace = true

colored = "2"
md5 = "0.7.0"
schemars = { version = "=1.0.0-alpha.17", optional = true }
