[package]
name = "pumpkin-inventory"
version.workspace = true
edition.workspace = true

[dependencies]
# For items
pumpkin-world = { path = "../pumpkin-world" }
pumpkin-registry = {path = "../pumpkin-registry"}
pumpkin-macros = { path = "../pumpkin-macros" }
pumpkin-core = { path = "../pumpkin-core" }

log.workspace = true
rayon.workspace = true
itertools.workspace = true
crossbeam.workspace = true
tokio.workspace = true
thiserror.workspace = true

num-traits.workspace = true
num-derive.workspace = true
