[package]
name = "pumpkin-protocol"
version.workspace = true
edition.workspace = true

[dependencies]
pumpkin-nbt = { path = "../pumpkin-nbt" }
pumpkin-config = { path = "../pumpkin-config" }
pumpkin-macros = { path = "../pumpkin-macros" }
pumpkin-world = { path = "../pumpkin-world" }
pumpkin-core = { path = "../pumpkin-core" }

uuid.workspace = true
serde.workspace = true
thiserror.workspace = true
itertools.workspace = true
log.workspace = true
tokio.workspace = true
num-traits.workspace = true
num-derive.workspace = true

bytes = "1.8"

# encryption
aes = "0.8.4"
cfb8 = "0.8.1"

# decryption
libdeflater = "1.22.0"