[package]
name = "pumpkin-registry"
version.workspace = true
edition.workspace = true

[dependencies]
pumpkin-protocol = { path = "../pumpkin-protocol" }
pumpkin-core = { path = "../pumpkin-core" }

serde.workspace = true
serde_json.workspace = true

# nbt
fastnbt = { git = "https://github.com/owengage/fastnbt.git" }
