[package]
name = "pumpkin-registry"
version.workspace = true
edition.workspace = true

[dependencies]
pumpkin-protocol = { path = "../pumpkin-protocol" }
pumpkin-nbt = { path = "../pumpkin-nbt" }
pumpkin-core = { path = "../pumpkin-core" }

indexmap = { version = "2.7.0", features = ["serde"] }

serde.workspace = true
serde_json.workspace = true

