[package]
name = "pumpkin-world"
version.workspace = true
edition.workspace = true

[dependencies]
pumpkin-core = { path = "../pumpkin-core" }
pumpkin-config = { path = "../pumpkin-config" }
pumpkin-macros = { path = "../pumpkin-macros" }
pumpkin-nbt = { path = "../pumpkin-nbt" }

tokio.workspace = true
rayon.workspace = true
derive_more.workspace = true
itertools.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
parking_lot.workspace = true
bytes.workspace = true

num-traits.workspace = true
num-derive.workspace = true
futures = "0.3"
dashmap = "6.1.0"

# Compression
flate2 = "1.0"
lz4 = "1.28.0"

enum_dispatch = "0.3.13"
derive-getters = "0.5.0"

noise = "0.9.0"

rand = "0.8.5"
