[package]
name = "pumpkin-world"
version.workspace = true
edition.workspace = true

[dependencies]
pumpkin-core = { path = "../pumpkin-core" }
pumpkin-config = { path = "../pumpkin-config" }
pumpkin-macros = { path = "../pumpkin-macros" }

tokio.workspace = true
rayon.workspace = true
derive_more.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true

num-traits.workspace = true
num-derive.workspace = true
dashmap = "6.1.0"

# Compression   
flate2 = "1.0"
lz4 = "1.28.0"

enum_dispatch = "0.3.13"

fastnbt = { git = "https://github.com/owengage/fastnbt.git" }

noise = "0.9.0"

rand = "0.8.5"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "chunk_noise"
harness = false

[[bench]]
name = "chunk_noise_populate"
harness = false
