[package]
name = "pumpkin"
version = "0.1.0-dev"
description = "Empowering everyone to host fast and efficient Minecraft servers."
edition = "2021"

[package.metadata.tauri-winres]
# FileDescription is handled as the Program name by Windows!
FileDescription = "Pumpkin"
OriginalFilename = "pumpkin.exe"
LegalCopyright = "Copyright © 2024 Aleksander Medvedev"

[dependencies]
# pumpkin
pumpkin-core = { path = "../pumpkin-core" }
pumpkin-config = { path = "../pumpkin-config" }
pumpkin-inventory = { path = "../pumpkin-inventory" }
pumpkin-world = { path = "../pumpkin-world" }
pumpkin-entity = { path = "../pumpkin-entity" }
pumpkin-protocol = { path = "../pumpkin-protocol" }
pumpkin-registry = { path = "../pumpkin-registry" }
pumpkin-macros = { path = "../pumpkin-macros" }

itertools.workspace = true
log.workspace = true
crossbeam.workspace = true
uuid.workspace = true
tokio.workspace = true
rayon.workspace = true
thiserror.workspace = true

num-traits.workspace = true
num-derive.workspace = true
parking_lot.workspace = true

# config
serde.workspace = true
serde_json.workspace = true

bytes = "1.8"

rand = "0.8.5"

num-bigint = "0.4"

# encryption
rsa = "0.9.6"
rsa-der = "0.3.0"

# authentication
reqwest = { version = "0.12.9", default-features = false, features = [
    "http2",
    "json",
    "macos-system-configuration",
    "rustls-tls",
] }

sha1 = "0.10.6"
digest = "=0.11.0-pre.9"

# velocity en
hmac = "0.12.1"
sha2 = "0.10.8"

# icon loading
base64 = "0.22.1"
png = "0.17.14"

# logging
simple_logger = { version = "5.0.0", features = ["threads"] }
time = "0.3.36"
sys-info = "0.9.1"

# commands
async-trait = "0.1.83"

[build-dependencies]
tauri-winres = "0.1.1"
git-version = "0.3.9"
