[package]
name = "pumpkin"
version = "0.1.0-dev"
description = "Empowering everyone to host fast and efficient Minecraft servers."
edition = "2021"

[package.metadata.tauri-winres]
# FileDescription is handled as the Program name by Windows!
FileDescription = "Pumpkin"
OriginalFilename = "pumpkin.exe"
LegalCopyright = "Copyright © 2024 Aleksander Medvedev"

[dependencies]
# pumpkin
pumpkin-core = { path = "../pumpkin-core" }
pumpkin-config = { path = "../pumpkin-config" }
pumpkin-inventory = { path = "../pumpkin-inventory" }
pumpkin-world = { path = "../pumpkin-world" }
pumpkin-entity = { path = "../pumpkin-entity" }
pumpkin-protocol = { path = "../pumpkin-protocol" }
pumpkin-registry = { path = "../pumpkin-registry" }
pumpkin-macros = { path = "../pumpkin-macros" }

log.workspace = true
crossbeam.workspace = true
uuid.workspace = true
tokio.workspace = true
rayon.workspace = true
thiserror.workspace = true

num-traits.workspace = true
num-derive.workspace = true

# config
serde.workspace = true
serde_json.workspace = true

bytes.workspace = true

rand = "0.8.5"

num-bigint = "0.4"

# encryption
rsa = "0.9.7"
rsa-der = "0.3.0"

# authentication
reqwest = { version = "0.12.9", default-features = false, features = [
    "http2",
    "json",
    "macos-system-configuration",
    "rustls-tls",
] }

sha1 = "0.10.6"

# velocity en
hmac = "0.12.1"
sha2 = "0.10.8"

base64 = "0.22.1"

# icon loading
png = "0.17.15"

# logging
simple_logger = { version = "5.0.0", features = ["threads"] }
time = "0.3.37"

# commands
async-trait = "0.1.83"
[build-dependencies]
git-version = "0.3.9"
# This makes it so the entire project doesn't recompile on each build on linux.
[target.'cfg(target_os = "windows")'.build-dependencies]
tauri-winres= "0.1.1"
