[workspace]

[package]
name = "hello-plugin-source"
edition = "2021"
version = "0.1.0"
authors = ["vyPal"]
description = "An example plugin for Pumpkin"

[lib]
crate-type = ["dylib"]

[dependencies]
pumpkin = { path = "../../pumpkin" }
pumpkin-core = { path = "../../pumpkin-core" }
pumpkin-protocol = { path = "../../pumpkin-protocol" }
pumpkin-api-macros = { path = "../../pumpkin-api-macros" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.19"
async-trait = "0.1.83"