[package]
name = "pumpkin-egui-android"
edition = "2021"

[dependencies]
eframe = { version = "0.29", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
pumpkin-egui-logger = { path = "../pumpkin-egui-logger" }
jni = "*"
egui-winit = "0.29"
ndk-context = "*"
thiserror = "1"
android-activity = { version = "0.6", features = ["game-activity"] }
pumpkin-egui = { path = "../" }
log = "0.4"


[lib]
name = "pumpkin_egui_android"
crate-type = ["cdylib"]
